build/log/idf_py_stdout_output_15860
Command: ninja all
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/sensor_distancia.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/sensor_distancia.c.obj 
C:\Espressif\tools\xtensa-esp-elf\esp-15.2.0_20251204\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v6.0\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/brun0/workspace/sumo_treinee/build/config -IC:/Users/brun0/workspace/sumo_treinee/main -IC:/esp/v6.0/esp-idf/components/esp_libc/platform_include -IC:/esp/v6.0/esp-idf/components/freertos/config/include -IC:/esp/v6.0/esp-idf/components/freertos/config/include/freertos -IC:/esp/v6.0/esp-idf/components/freertos/config/xtensa/include -IC:/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/v6.0/esp-idf/components/freertos/esp_additions/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/include/soc -IC:/esp/v6.0/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/etm/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/power_supply/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/modem/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/port/esp32/. -IC:/esp/v6.0/esp-idf/components/esp_hw_support/port/esp32/include -IC:/esp/v6.0/esp-idf/components/heap/include -IC:/esp/v6.0/esp-idf/components/heap/tlsf -IC:/esp/v6.0/esp-idf/components/log/include -IC:/esp/v6.0/esp-idf/components/soc/include -IC:/esp/v6.0/esp-idf/components/soc/esp32 -IC:/esp/v6.0/esp-idf/components/soc/esp32/include -IC:/esp/v6.0/esp-idf/components/soc/esp32/register -IC:/esp/v6.0/esp-idf/components/hal/platform_port/include -IC:/esp/v6.0/esp-idf/components/hal/esp32/include -IC:/esp/v6.0/esp-idf/components/hal/include -IC:/esp/v6.0/esp-idf/components/esp_rom/include -IC:/esp/v6.0/esp-idf/components/esp_rom/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/esp/v6.0/esp-idf/components/esp_rom/esp32 -IC:/esp/v6.0/esp-idf/components/esp_common/include -IC:/esp/v6.0/esp-idf/components/esp_system/include -IC:/esp/v6.0/esp-idf/components/esp_system/port/soc -IC:/esp/v6.0/esp-idf/components/esp_system/port/include/private -IC:/esp/v6.0/esp-idf/components/esp_stdio/include -IC:/esp/v6.0/esp-idf/components/xtensa/esp32/include -IC:/esp/v6.0/esp-idf/components/xtensa/include -IC:/esp/v6.0/esp-idf/components/xtensa/deprecated_include -IC:/esp/v6.0/esp-idf/components/esp_hal_gpio/include -IC:/esp/v6.0/esp-idf/components/esp_hal_gpio/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_usb/include -IC:/esp/v6.0/esp-idf/components/esp_hal_pmu/include -IC:/esp/v6.0/esp-idf/components/esp_hal_pmu/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_ana_conv/include -IC:/esp/v6.0/esp-idf/components/esp_hal_ana_conv/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_dma/include -IC:/esp/v6.0/esp-idf/components/esp_hal_i2s/include -IC:/esp/v6.0/esp-idf/components/esp_hal_i2s/esp32/include -IC:/esp/v6.0/esp-idf/components/lwip/include -IC:/esp/v6.0/esp-idf/components/lwip/include/apps -IC:/esp/v6.0/esp-idf/components/lwip/lwip/src/include -IC:/esp/v6.0/esp-idf/components/lwip/port/include -IC:/esp/v6.0/esp-idf/components/lwip/port/freertos/include -IC:/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/esp/v6.0/esp-idf/components/esp_adc/include -IC:/esp/v6.0/esp-idf/components/esp_adc/interface -IC:/esp/v6.0/esp-idf/components/esp_adc/esp32/include @"C:/Users/brun0/workspace/sumo_treinee/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/brun0/workspace/sumo_treinee=. -fmacro-prefix-map=C:/esp/v6.0/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/sensor_distancia.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\sensor_distancia.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/sensor_distancia.c.obj -c C:/Users/brun0/workspace/sumo_treinee/main/sensor_distancia.c
C:/Users/brun0/workspace/sumo_treinee/main/sensor_distancia.c: In function 'ler_sensor_raw':
C:/Users/brun0/workspace/sumo_treinee/main/sensor_distancia.c:37:9: error: implicit declaration of function 'vTaskDelay' [-Wimplicit-function-declaration]
   37 |         vTaskDelay(pdMS_TO_TICKS(2)); // pequena pausa entre leituras
      |         ^~~~~~~~~~
C:/Users/brun0/workspace/sumo_treinee/main/sensor_distancia.c:37:20: error: implicit declaration of function 'pdMS_TO_TICKS' [-Wimplicit-function-declaration]
   37 |         vTaskDelay(pdMS_TO_TICKS(2)); // pequena pausa entre leituras
      |                    ^~~~~~~~~~~~~
[2/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\brun0\workspace\sumo_treinee\build\bootloader && C:\Espressif\tools\python\v6.0\venv\Scripts\python.exe C:/esp/v6.0/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/brun0/workspace/sumo_treinee/build/bootloader/bootloader.bin"
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
ninja: build stopped: subcommand failed.
